--- a/cambios/base.html
+++ b/cambios/base.html
@@ -67,15 +67,15 @@
 
 								<div class="navbar-header">
 									<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-	        								<i class="fa fa-navicon fa-lg"></i>
+	        								<span class="sub-arrow">...</span>
 	      								</button>
 								</div>
 
-								<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-									<ul class="nav navbar-nav toolbar">
+								<div class="collapse navbar-collapse">
+									<ul class="menu nav navbar-nav sm">
 									{% block tabs %}
 									<li id="nav_layers">
-								      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% trans "Data" %}<i class="fa fa-angle-down fa-lg"></i></a>
+								      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% trans "Data" %}<span class="sub-arrow">...</span></a>
 								      <ul class="dropdown-menu">
 									<li><a href="{% url "layer_browse" %}">{% trans "Layers" %}</a></li>
 									<li><a href="{% url "document_browse" %}">{% trans "Documents" %}</a></li>
@@ -91,7 +91,7 @@
 								    </li>
 									<li id="nav_maps">
 								      {% if user.is_authenticated %}
-								      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% trans "Maps" %}<i class="fa fa-angle-down fa-lg"></i></a>
+								      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% trans "Maps" %}<span class="sub-arrow">...</span></a>
 								      <ul class="dropdown-menu">
 									<li><a href="{% url "maps_browse" %}">{% trans "Explore Maps" %}</a></li>
 									<li> <a href="{% url "new_map" %}">{% trans "Create Map" %}</a></li>
@@ -101,7 +101,7 @@
 								      {% endif %}
 								    </li>
 								    <li>
-									  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% trans "About" %}<i class="fa fa-angle-down fa-lg"></i></a>
+									  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% trans "About" %}<span class="sub-arrow">...</span></a>
 								      <ul class="dropdown-menu">
 									<li><a href="{% url "profile_browse" %}">{% trans "People" %}</a></li>
 									<li><a href="{% url "group_list" %}">{% trans "Groups" %}</a></li>
@@ -120,7 +120,7 @@
 								    {% endblock %}
 								    {% endblock %}
 								  </ul>
-								      <ul class="nav navbar-nav navbar-right">
+								      <ul class="menu nav navbar-nav sm">
 								    <li>
 								      <div class="search">
 									<form id="search" action="{% url "search" %}" >
@@ -137,7 +137,7 @@
 								    <li><a href="{% url "account_signup" %}">{% trans "Register" %}</a></li>
 								    {% endif %}
 								    {% if user.is_authenticated %}
-								    <li><a href="#" class="dropdown-toggle avatar" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% avatar user 42 %} {{ user.username }}<i class="fa fa-angle-down fa-lg"></i></a>
+								    <li><a href="#" class="dropdown-toggle avatar" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% avatar user 42 %} {{ user.username }}<span class="sub-arrow">...</span></a>
 								      <ul class="dropdown-menu">
 									<li><a href="{{ user.get_absolute_url }}">{% trans "Profile" %}</a></li>
 									<li><a href="{% url "recent-activity" %}">{% trans "Recent Activity" %}</a></li>
