--- a/cambios/base.html
+++ b/cambios/base.html
@@ -67,11 +67,14 @@
 
 								<div class="navbar-header">
 									<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-	        								<span class="sub-arrow">...</span>
-	      								</button>
+	        					<span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+	      					</button>
 								</div>
 
-								<div class="collapse navbar-collapse">
+								<div id="navbar" class="collapse navbar-collapse">
 									<ul class="nav navbar-nav">
 									{% block tabs %}
 									<li id="nav_layers">
